--- a/views/searching.html
+++ b/views/searching.html
@@ -39,7 +39,8 @@
                   <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                 </div>
                 <div id="modal-content" class="modal-body">
-
+                  <p id="address"></p>
+                  <p id="lema"></p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Pedir ahora</button>
