--- a/css/main.css
+++ b/css/main.css
@@ -41,15 +41,19 @@
 .rest {
   color: #fff;
 }
-.sombra {
-  content:"";
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.6);
-  }
-.height-60 {
-  height: 33vw;
+.height-25 {
+  height: 25vw;
+}
+.color-black {
+  color: #000;
+}
+.color-gray {
+  color: gray;
+  font-family:cursive;
+}
+.bold-text {
+  font-weight: bold;
+}
+.info {
+  font-size: 18px;
 }
