--- a/views/searching.html
+++ b/views/searching.html
@@ -36,11 +36,14 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                  <h4 class="modal-title text-center bold-text color-black info" id="myModalLabel">Modal title</h4>
                 </div>
                 <div id="modal-content" class="modal-body">
-                  <p id="address"></p>
-                  <p id="lema"></p>
+                  <div id="map" class="">
+                    <iframe src="" width="" height=""></iframe>
+                  </div>
+                  <p id="address" class="text-center color-black info"></p>
+                  <p id="lema" class="text-center color-gray"></p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Pedir ahora</button>
