--- a/views/searching.html
+++ b/views/searching.html
@@ -34,7 +34,7 @@
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-orange">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   <h4 class="modal-title text-center bold-text color-black info" id="myModalLabel">Modal title</h4>
                 </div>
@@ -46,7 +46,7 @@
                   <p id="lema" class="text-center color-gray"></p>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Pedir ahora</button>
+                  <button type="button" class="btn btn-default col-xs-offset-4 col-xs-4 bg-orange" data-dismiss="modal">Pedir ahora</button>
                 </div>
               </div>
             </div>
