--- a/views/searching.html
+++ b/views/searching.html
@@ -13,49 +13,54 @@
   </head>
   <body class="bg-black">
     <div id="main" class="main bg-black container orange pd-35">
-      <p class="text-center fz-45 pd-top-30">Foodmap</p>
-      <div class="map mg-bt-25">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.8961881313026!2d-77.03709328530758!3d-12.119254991419059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c9ad1800415d%3A0x75a39531fec524aa!2sLaboratoria!5e0!3m2!1ses-419!2spe!4v1514344864714" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+     <p class="text-center fz-45 pd-top-30">Foodmap</p>
+     <div class="map mg-bt-25">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.8961881313026!2d-77.03709328530758!3d-12.119254991419059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c9ad1800415d%3A0x75a39531fec524aa!2sLaboratoria!5e0!3m2!1ses-419!2spe!4v1514344864714" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+     </div>
+     <div class="text-center orange fz-25 mg-bt-15">
+      Comida cerca de ti
+     </div>
+     <div class="container">
+
+      <div class="row">
+       <div class="input-group col-xs-12">
+        <input id="searching"type="text" class="form-control" aria-label="aaa" placeholder="cevicheria, polleria, criollo, sushi">
+       </div>
       </div>
-      <div class="text-center orange fz-25 mg-bt-15">
-        Comida cerca de ti
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="input-group col-xs-12">
-            <input id="searching"type="text" class="form-control" aria-label="aaa" placeholder="cevicheria, polleria, criollo, sushi">
+
+      <div class="row">
+       <div id="sample" class="col-xs-12 mg-top-25">
+       </div>
+       <!-- modal -->
+       <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+         <div class="modal-dialog" role="document">
+           <div class="modal-content">
+             <div class="modal-header bg-orange">
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+               <h4 class="modal-title text-center bold-text color-black info" id="myModalLabel">Modal title</h4>
+             </div>
+             <div id="modal-content" class="modal-body">
+               <div id="map" class="">
+                 <iframe src="" width="" height=""></iframe>
+               </div>
+               <p id="address" class="text-center color-black info"></p>
+               <p id="lema" class="text-center color-gray"></p>
+               <p id="offers" class="text-center color-red bold-text">Ver Ofertas</p>
+               <div id="show-offers" class="display-none">
+                 <div id="offer-1" class="offer"></div>
+                 <div id="offer-2" class="offer"></div>
+                 <div id="offer-3" class="offer"></div>
+               </div>
+             </div>
+             <div class="modal-footer">
+               <button type="button" class="btn btn-default col-xs-offset-4 col-xs-4 bg-orange" data-dismiss="modal">Pedir ahora</button>
+             </div>
+           </div>
          </div>
-        </div>
-
-        <div class="row">
-          <div id="sample" class="col-xs-12 mg-top-25">
-          </div>
-
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header bg-orange">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title text-center bold-text color-black info" id="myModalLabel">Modal title</h4>
-                </div>
-                <div id="modal-content" class="modal-body">
-                  <div id="map" class="">
-                    <iframe src="" width="" height=""></iframe>
-                  </div>
-                  <p id="address" class="text-center color-black info"></p>
-                  <p id="lema" class="text-center color-gray"></p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default col-xs-offset-4 col-xs-4 bg-orange" data-dismiss="modal">Pedir ahora</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
+       </div>
+     </div>
+   </div>
+ </div>
 
 <!--Import jQuery -->
   <script type="text/javascript" src="../vendors/js/jquery-3.2.1.min.js"></script>
