añadiendo funcionalidad a la seccion de ofertas

--- a/views/searching.html
+++ b/views/searching.html
@@ -45,11 +45,8 @@
                </div>
                <p id="address" class="text-center color-black info"></p>
                <p id="lema" class="text-center color-gray"></p>
-               <p id="offers" class="text-center color-red bold-text">Ver Ofertas</p>
-               <div id="show-offers" class="display-none">
-                 <div id="offer-1" class="offer"></div>
-                 <div id="offer-2" class="offer"></div>
-                 <div id="offer-3" class="offer"></div>
+               <p id="offers" class="text-center color-red bold-text">Mira las ofertas que tenemos para ti!</p>
+               <div id="show-offers" class="display-none container">
                </div>
              </div>
              <div class="modal-footer">
